fix various problems with style and alignment, using steps under accordion

--- a/assets/targets/components/base/_typography.scss
+++ b/assets/targets/components/base/_typography.scss
@@ -40,7 +40,8 @@
   }
 
   .ticked-list li,
-  .no-li {
+  .no-li,
+  ol.steps li {
     list-style-type: none;
   }
 }
@@ -58,15 +59,15 @@
 
     &::before {
       @include rem(height, 5px);
+      @include rem(left, 6px);
       @include rem(margin-left, -30px);
-      @include rem(top, 8px);
+      @include rem(top, 6px);
       @include rem(width, 10px);
       background: transparent;
       border: 3px solid $green;
       border-right: 0 none;
       border-top: 0 none;
       content: '';
-      left: 0;
       position: absolute;
       transform: rotate(-45deg);
     }
@@ -314,9 +315,12 @@
         }
       }
 
+      ol,
       ul {
         @include rem(padding-left, 20px);
         @include rem(padding-right, 20px);
+        padding-bottom: 0;
+        padding-top: .5em;
       }
 
       @include breakpoint(desktop) {
